force-app/main/default/objects/ServiceRequest__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NotStarted</fullName>
                <default>true</default>
                <label>Não Iniciado</label>
            </value>
            <value>
                <fullName>InProgress</fullName>
                <label>Em Andamento</label>
            </value>
            <value>
                <fullName>AnalysisComplete</fullName>
                <label>Análise Concluída</label>
            </value>
            <value>
                <fullName>Canceled</fullName>
                <label>Cancelado</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>