force-app/main/default/objects/ServiceRequest__c/fields/SubStatus__c.field-meta.xml
<CustomField>
    <fullName>SubStatus__c</fullName>
    <description>identifica a ação do status após a conclusão.</description>
    <label>Sub-Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
                <label>Aprovado</label>
            </value>
            <value>
                <fullName>Denied</fullName>
                <label>Negado</label>
            </value>
            <value>
                <fullName>Improper</fullName>
                <label>Indevido</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>