force-app/main/default/objects/ServiceRequest__c/fields/System__c.field-meta.xml
<CustomField>
    <fullName>System__c</fullName>
    <label>Sistema</label>
    <type>TextArea</type>
</CustomField>