force-app/main/default/objects/ServiceRequest__c/fields/Terminal__c.field-meta.xml
<CustomField>
    <fullName>Terminal__c</fullName>
    <description>Outros Terminais Por Onde o Chamado Foi Aberto</description>
    <label>Terminal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>