force-app/main/default/objects/ServiceRequest__c/fields/TypeOfAddress__c.field-meta.xml
<CustomField>
    <fullName>TypeOfAddress__c</fullName>
    <label>Tipo de endereço</label>
    <length>255</length>
    <type>Text</type>
</CustomField>