force-app/main/default/objects/ServiceRequest__c/fields/TypeOfService__c.field-meta.xml
<CustomField>
    <fullName>TypeOfService__c</fullName>
    <description>Tipo de Atendimento realizado.</description>
    <inlineHelpText>Tipo de Atendimento realizado.</inlineHelpText>
    <label>Tipo de Atendimento</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ContactType__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TechnicalRequest</fullName>
                <label>Solicitação Técnica</label>
            </value>
            <value>
                <fullName>ComercialRequest</fullName>
                <label>Solicitação Comercial</label>
            </value>
            <value>
                <fullName>BillingRequest</fullName>
                <label>Solicitação de Conta</label>
            </value>
            <value>
                <fullName>TechnicalInformation</fullName>
                <label>Informação Técnica</label>
            </value>
            <value>
                <fullName>ComercialInformation</fullName>
                <label>Informação Comercial</label>
            </value>
            <value>
                <fullName>BillingInformation</fullName>
                <label>Informação de Conta</label>
            </value>
            <value>
                <fullName>OtherChannelInformation</fullName>
                <label>Informação Outros Canais</label>
            </value>
            <value>
                <fullName>TDNARetraction</fullName>
                <label>Retratação TDNA</label>
            </value>
            <value>
                <fullName>ComercialOffer</fullName>
                <label>Oferta comercial</label>
            </value>
            <value>
                <fullName>RelationshipProactivity</fullName>
                <label>Proatividade Relacionamento</label>
            </value>
            <value>
                <fullName>TechnicalProactivity</fullName>
                <label>Proatividade Técnico</label>
            </value>
            <value>
                <fullName>ComercialProactivity</fullName>
                <label>Proatividade Comercial</label>
            </value>
            <value>
                <fullName>DetractionProactivity</fullName>
                <label>Proatividade Detração</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>