force-app/main/default/objects/ServiceRequest__c/fields/VivoMaestro_ID__c.field-meta.xml
<CustomField>
    <fullName>VivoMaestro_ID__c</fullName>
    <label>VivoMaestro ID</label>
    <type>TextArea</type>
</CustomField>