force-app/main/default/objects/ServiceRequest__c/fields/VivoMaestroID__c.field-meta.xml
<CustomField>
    <fullName>VivoMaestroID__c</fullName>
    <label>VivoMaestro ID</label>
    <type>TextArea</type>
</CustomField>