force-app/main/default/objects/ServiceRequest__c/fields/WayOfContact__c.field-meta.xml
<CustomField>
    <fullName>WayOfContact__c</fullName>
    <description>Meio por onde este contato foi realizado.</description>
    <inlineHelpText>Meio por onde este contato foi realizado.</inlineHelpText>
    <label>Meio de Contato</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Whatsapp</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
                <label>E-mail</label>
            </value>
            <value>
                <fullName>Phone</fullName>
                <label>Telefone</label>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>