force-app/main/default/objects/ServiceRequest__c/recordTypes/Annotations.recordType-meta.xml
<RecordType>
    <fullName>Annotations</fullName>
    <active>true</active>
    <label>Anotações</label>
</RecordType>