force-app/main/default/objects/ServiceRequest__c/recordTypes/EngineeringDrive.recordType-meta.xml
<RecordType>
    <fullName>EngineeringDrive</fullName>
    <active>true</active>
    <label>EngineeringDrive</label>
</RecordType>