force-app/main/default/objects/ServiceRequest__c/recordTypes/SalesSupport.recordType-meta.xml
<RecordType>
    <fullName>SalesSupport</fullName>
    <active>true</active>
    <label>SAV - Suporte à Vendas</label>
</RecordType>