force-app/main/default/objects/ServiceRequest__c/recordTypes/Tsuru.recordType-meta.xml
<RecordType>
    <fullName>Tsuru</fullName>
    <active>true</active>
    <label>Tsuru</label>
</RecordType>