force-app/main/default/objects/ServiceRequest__c/validationRules/CheckChangeRecordAfterCompletedRule.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckChangeRecordAfterCompletedRule</fullName>
    <active>true</active>
    <description>Não é possível editar o registro depois de concluído.</description>
    <errorConditionFormula>AND
(
OR
(ISPICKVAL(Status__c,&apos;AnalysisComplete&apos;),
ISPICKVAL(Status__c,&apos;Canceled&apos;)),
AND (NOT (CreatedById = $User.Id),
(ISCHANGED(RatingScale__c)),
NOT(ISCHANGED(Status__c)),
NOT(ISCHANGED(RequestType__c))

)
)</errorConditionFormula>
    <errorMessage>Não é possível editar o registro após análise concluída ou cancelado.</errorMessage>
</ValidationRule>