force-app/main/default/objects/ServiceRequest__c/validationRules/CheckChangeStatusRule.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckChangeStatusRule</fullName>
    <active>true</active>
    <description>Não permite alterar o Status para um valor anterior.</description>
    <errorConditionFormula>Case(PRIORVALUE(Status__c),
&apos;NotStarted&apos;,1,
&apos;InProgress&apos;,2,
&apos;AnalysisComplete&apos;,3, 3) &gt;
Case(Status__c,
&apos;NotStarted&apos;,1,
&apos;InProgress&apos;,2,
&apos;AnalysisComplete&apos;,3, 3)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Não é permitida a alteração para um status anterior.</errorMessage>
</ValidationRule>