force-app/main/default/objects/ServiceRequest__c/validationRules/CheckNewServiceRequestNotStartedRule.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckNewServiceRequestNotStartedRule</fullName>
    <active>true</active>
    <description>Validação para criar apenas SS com status = Não iniciado</description>
    <errorConditionFormula>AND(
ISNEW(),
NOT ISPICKVAL(Status__c,&apos;NotStarted&apos;)
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Não é permitida a criação de uma solicitação com este Status.</errorMessage>
</ValidationRule>