force-app/main/default/objects/ServiceRequest__c/listViews/AddressRegister_ServiceRequest.listView-meta.xml
<ListView>
    <fullName>AddressRegister_ServiceRequest</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>RequestType__c</columns>
    <columns>Status__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Queue</filterScope>
    <label>Fila SAV - Cadastro de endereço</label>
    <queue>AddressRegisterSAVQueue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
        <allPartnerUsers></allPartnerUsers>
    </sharedTo>
</ListView>