force-app/main/default/objects/ServiceRequest__c/listViews/AddressRegisterSAVQueue_ServiceRequest.listView-meta.xml
<ListView>
    <fullName>AddressRegisterSAVQueue_ServiceRequest</fullName>
    <filterScope>Queue</filterScope>
    <label>Fila SAV - Cadastro de endereço</label>
    <queue>AddressRegisterSAVQueue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>