force-app/main/default/objects/ServiceRequest__c/listViews/CaseOpeningSAVQueue_ServiceRequest1.listView-meta.xml
<ListView>
    <fullName>CaseOpeningSAVQueue_ServiceRequest1</fullName>
    <filterScope>Queue</filterScope>
    <label>Fila SAV - Abertura de Chamado</label>
    <queue>CaseOpeningSAVQueue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>