force-app/main/default/objects/ServiceRequest__c/listViews/CorrectionRegistrationDataSAVQueue_ServiceRequest.listView-meta.xml
<ListView>
    <fullName>CorrectionRegistrationDataSAVQueue_ServiceRequest</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>RequestType__c</columns>
    <columns>Status__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Queue</filterScope>
    <label>Fila SAV - Correção de dados cadastrais</label>
    <queue>CorrectionRegistrationDataSAVQueue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>