force-app/main/default/objects/ServiceRequest__c/listViews/CorrectionRegistrationDataSAVQueue_ServiceRequest1.listView-meta.xml
<ListView>
    <fullName>CorrectionRegistrationDataSAVQueue_ServiceRequest1</fullName>
    <filterScope>Queue</filterScope>
    <label>Fila SAV - Correção de dados cadastrais</label>
    <queue>CorrectionRegistrationDataSAVQueue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>