force-app/main/default/objects/ServiceRequest__c/listViews/InclusionAutomaticDebitSAVQueue_ServiceRequest.listView-meta.xml
<ListView>
    <fullName>InclusionAutomaticDebitSAVQueue_ServiceRequest</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>RequestType__c</columns>
    <columns>Status__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Queue</filterScope>
    <label>Fila SAV - Inclusão Debito automático</label>
    <queue>InclusionAutomaticDebitSAVQueue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
        <allPartnerUsers></allPartnerUsers>
    </sharedTo>
</ListView>