force-app/main/default/objects/ServiceRequest__c/listViews/InclusionAutomaticDebitSAVQueue_ServiceRequest1.listView-meta.xml
<ListView>
    <fullName>InclusionAutomaticDebitSAVQueue_ServiceRequest1</fullName>
    <filterScope>Queue</filterScope>
    <label>Fila SAV - Inclusão Debito automático</label>
    <queue>InclusionAutomaticDebitSAVQueue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>