force-app/main/default/objects/ServiceRequest__c/listViews/MyServiceRequestPending.listView-meta.xml
<ListView>
    <fullName>MyServiceRequestPending</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>RequestType__c</columns>
    <columns>Status__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>InProgress</value>
    </filters>
    <label>Minhas Solicitações Pendentes</label>
</ListView>