force-app/main/default/objects/ServiceRequest__c/listViews/OpportunityConsultationSAVQueue_ServiceRequest1.listView-meta.xml
<ListView>
    <fullName>OpportunityConsultationSAVQueue_ServiceRequest1</fullName>
    <filterScope>Queue</filterScope>
    <label>Fila SAV - Consulta de Oportunidade</label>
    <queue>OpportunityConsultationSAVQueue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>